fit jdk8. GuiScrollPanel vert-handler fullsized now.  new Pause menu.